--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "mongoose": "^5.9.7"
+    "mongoose": "^5.9.7",
+    "mongoose-type-url": "^2.1.0"
   },
   "devDependencies": {
     "dotenv": "^16.0.3"
